--- a/Tagino project/package.json
+++ b/Tagino project/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-pdf": "^9.1.1",
     "react-router-dom": "^6.28.0"
   },
